# simple-rust-api

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2021-05-28-231154_users/: down.sql  up.sql
src/: main.rs  meteoswiss_api_client.rs  models.rs
src/views/: mod.rs
