[package]
name = "simple-rust-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["diesel_sqlite_pool"] }
diesel = { version = "1.4.4", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
csv = "1.1"
chrono = "0.4"
chrono-tz = "0.4"
